fix cutoff at bottom of popup

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -316,6 +316,6 @@ p {
 }
 
 #issues {
-	margin-bottom: 15px;
+	padding-bottom: 15px;
 }
 
